# ecunit

./: CMakeLists.txt  LICENSE  README.md
include/: ecunit-runner.h  ecunit.h
src/: CMakeLists.txt  ecunit.c  ecunit__cmp.cpp
test/: CMakeLists.txt  main.cpp
